--- a/app.json
+++ b/app.json
@@ -21,7 +21,7 @@
     "formation": {
         "web": {
             "quantity": 1,
-            "size": "free"
+            "size": "Eco"
         }
     },
     "image": "heroku/php"
